--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
+<img id="logo" src="logo.jpg"/>
+<div id="holder">
 <h1>Website under construction</h1>
-<p>Intensive</p>
+
+</div>
 </body>
 </html>
